# diffusion-policies

./:  *Minibuf-1*  # *Minibuf-1*#  .gitignore  README.md  TODO.md  data  demo_test.py  demo_xarm.py  environment.yaml  environment.yml  logs.json.txt  pyproject.toml  requirements-train.txt  setup.py  test.yaml  test.yml
baselines/diffusion_policy/: cnn_image_diffusion_policy.py
diffusion_policy/: base_image_policy.py  base_workspace.py
diffusion_policy/config/: pushblock_image_dataset.py  pusht_unet_image_diffusion_policy.yaml  train_pushblock_real_image.yaml  train_pushblock_real_lowdim.yaml  train_robomimic_image_workspace.yaml  train_unet_image_merlin_dinov2_policy.yaml  train_unet_image_merlin_hand_cond_dinov2_policy.yaml  train_unet_image_merlin_hand_cond_policy.yaml  train_unet_image_merlin_policy.yaml  train_unet_image_policy.yaml  train_unet_image_policy_ddim.yaml  train_unet_image_policy_dinov2.yaml  train_unet_image_real_policy.yaml  train_unet_image_real_policy_dinov2.yaml  train_unet_lowdim_policy.py  train_unet_lowdim_real_policy.yaml
diffusion_policy/policies/: ref.py  test.py  unet_image_diffusion_policy.py
diffusion_policy/unet/: robomimic_image_policy.py  train_robomimic_image_policy.py  train_unet_image_policy.py  train_unet_lowdim_policy.py  unet_image_policy.py  unet_lowdim_policy.py
diffusion_policy/unet_image_policy/: train_unet_diffusion_policy.py  train_unet_image_policy.py  unet_image_diffusion_policy.py  unet_image_policy.py
shared/components/: conv1d_components.py  positional_embed.py
shortcut_policy/: shortcut_model.py
(+124 files in other folders)
